--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "formify-frontend",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:4000",
@@ -23,7 +23,9 @@
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
+    "react-fullpage": "^0.1.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.2",
