--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,9 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "noImplicitAny": false
+        "noImplicitAny": false,
+        "charset": "utf8"
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["./node_modules/**/*"]
 }
