--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
+    "react-darkreader": "^1.5.5",
     "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-fullpage": "^0.1.19",
