--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-fullpage": "^0.1.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
