--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "moment": "^2.29.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
