--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,8 @@
     "react-scripts": "4.0.2",
     "tslib": "^2.1.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "start": "react-scripts start",
