--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,8 +15,10 @@ RUN yarn run build
 # Production build
 
 FROM nginx:alpine
+RUN ln -sf /usr/share/zoneinfo/Asiz/Seoul /etc/localtime
 COPY --from=builder /app/build /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
+ENV TZ Asia/Seoul
 CMD ["nginx", "-g", "daemon off;"]
