--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-scripts test",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -63,6 +63,8 @@
     "@types/react-router-dom": "^5.1.7",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
+    "less": "^4.1.1",
+    "less-loader": "^5.0.0",
     "react-app-rewired": "^2.1.8"
   }
 }
