--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,7 +64,7 @@
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "less": "^4.1.1",
-    "less-loader": "^5.0.0",
+    "less-loader": "7.1.0",
     "react-app-rewired": "^2.1.8"
   }
 }
