--- a/backend/ecosystem.config.json
+++ b/backend/ecosystem.config.json
@@ -2,7 +2,7 @@
     "apps": [
         {
             "name": "formify-backend",
-            "script": "./main.js",
+            "script": "./dist/main.js",
             "merge_logs": true,
             "max_restarts": 20,
             "exec_mode": "cluster",
