modify: remove excludes

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,6 +18,5 @@
         "noImplicitAny": false,
         "charset": "utf8"
     },
-    "include": ["src"],
-    "exclude": ["./node_modules/**/*"]
+    "include": ["src"]
 }
