modify: nginx css

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -32,5 +32,9 @@ http {
       index  index.html index.htm;
       try_files $uri $uri/ /index.html;
     }
+
+    location ~ \.css {
+      add_header  Content-Type    text/css;
+    }
   }
 }
