modify: nginx mime.types

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,6 +4,7 @@ events { worker_connections 1024; }
 
 http {
 
+  include mime.types;
   sendfile on;
 
   server {
@@ -31,10 +32,6 @@ http {
       root   /usr/share/nginx/html;
       index  index.html index.htm;
       try_files $uri $uri/ /index.html;
-    }
-
-    location ~ \.css {
-      add_header  Content-Type    text/css;
     }
   }
 }
