--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,7 +11,7 @@ http {
     listen 80;
 
     location /auth {
-      proxy_pass         http://app:4000;
+      proxy_pass         http://app;
       proxy_redirect     off;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
@@ -20,7 +20,7 @@ http {
     }
 
     location /graphql {
-      proxy_pass         http://app:4000;
+      proxy_pass         http://app;
       proxy_redirect     off;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
