--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
         volumes:
             - /app/node_modules
             - ./frontend:/app
+            - ../certbot/conf:/etc/letsencrypt
+            - ../certbot/www:/var/www/certbot
         links:
             - app
         depends_on:
@@ -37,8 +39,19 @@ services:
         restart: always
         ports:
             - '80:80'
+            - '443:443'
         expose:
             - '80'
+            - '443'
+        command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
+
+    certbot:
+        image: certbot/certbot
+        container_name: certbot_service
+        volumes:
+            - ../certbot/conf:/etc/letsencrypt
+            - ../certbot/www:/var/www/certbot
+        entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
     db:
         networks:
