--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,8 +9,24 @@ http {
 
   server {
     listen 80;
+    server_name formify.xyz;
+    server_tokens off;
 
-    location /auth {
+    location / {
+      return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+  }
+
+  server {
+    listen 443 ssl;
+    server_name formify.xyz;
+    server_tokens off;
+
+    location /api {
       proxy_pass         http://app:4000;
       proxy_redirect     off;
       proxy_set_header   Host $host;
@@ -33,5 +49,11 @@ http {
       index  index.html index.htm;
       try_files $uri $uri/ /index.html;
     }
+
+    ssl_certificate /etc/letsencrypt/live/formify.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/formify.xyz/privkey.pem;
   }
+
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
