modify: docker nginx

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
         expose:
             - '4000'
 
-    client:
+    nginx:
         networks:
             - app-tier
         build:
