--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,7 +26,7 @@ http {
     server_name formify.xyz;
     server_tokens off;
 
-    location /api {
+    location /auth {
       proxy_pass         http://app:4000;
       proxy_redirect     off;
       proxy_set_header   Host $host;
